# bci-music

./: .dockerignore  .env.example  .gitignore  DEMO_CHECKLIST.md  DEPLOYMENT.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml  railway.json  slides.md
scripts/: lyria_smoke.py  smoke_calibration_banner.py  smoke_change_prompt.py  smoke_change_prompt_switch.py  smoke_prompt_space.py  smoke_recorder.py  smoke_tune_panel.py
src/muse2_music_lab/: __init__.py  __main__.py  battery.py  board.py  bridge.py  bt_reset.py  cli.py  config.py  features.py  main.py  mapping.py  midi_monitor.py  output_midi.py  output_osc.py  perform_tui.py  simulate.py  smoother.py  state.py  tui.py  viz_bridge.py  viz_mapping.py
src/muse2_music_lab/audio/: __init__.py  fft.py
src/muse2_music_lab/eeg/: __init__.py  board.py  brainflow_loop.py  features.py
src/muse2_music_lab/lyria/: __init__.py  audio_play.py  mapping.py  session.py
src/muse2_music_lab/music/: __init__.py  prompt_guard.py
src/muse2_music_lab/server/: __init__.py  app.py  audio_broadcast.py
src/muse2_music_lab/visuals/: __init__.py  seed_evolver.py  seed_image.py
static/: app.js  audio.js  index.html  recorder.js  style.css  visualizer.js
viz/prompts/: default.yaml
viz/sidecar/: README.md  pyproject.toml
viz/sidecar/sidecar/: __init__.py  diffusion.py  main.py  osc_server.py  prompt_builder.py  state.py  syphon_out.py
viz/touchdesigner/: README.md  osc_schema.md
