[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muse2-music-lab"
version = "0.1.0"
description = "Stream EEG from a Muse 2 via BrainFlow, extract musical features, and route them to a DAW as MIDI CC or OSC."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ashrit" }]
dependencies = [
    "brainflow>=5.10",
    "mido>=1.3",
    "numpy>=1.24",
    "python-osc>=1.8",
    "python-rtmidi>=1.5",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]
tui = ["rich>=13"]

[project.scripts]
muse2-music = "muse2_music_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
