[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muse2-viz-sidecar"
version = "0.1.0"
description = "Diffusion sidecar for the muse2 visual layer. Receives OSC, publishes frames via Syphon."
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    # OSC + config
    "python-osc>=1.8",
    "pyyaml>=6.0",
    "numpy>=1.24",
    # Diffusion via Hugging Face diffusers on MPS. MLX is a future swap-in.
    "diffusers>=0.27",
    "transformers>=4.40",
    "accelerate>=0.30",
    "torch>=2.3",
    "Pillow>=10.0",
    # Syphon (macOS-only; installed conditionally)
    "syphon-python>=0.1.1 ; sys_platform == 'darwin'",
]

[project.scripts]
muse2-viz-sidecar = "sidecar.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sidecar*"]
